# zaolib

./: .gitignore  README.md  meson.build
include/: Z2.hpp  device.hpp
src/: Z2.cpp  device.cpp
